# aws-field-samples

./: .gitignore  README.md
ConverseAgent/: .gitignore  DEVELOPER-GUIDE.md  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
ConverseAgent/notebooks/: 1 - Creating a basic agent.ipynb  2 - Creating a web browsing agent.ipynb  3 - Computer use with agents.ipynb  4 - Creating an agent with filesystem.ipynb  5 - Creating agents with Bedrock Inline Agents.ipynb
ConverseAgent/notebooks/sample_data/: calculator_lambda.py  space.md
ConverseAgent/src/converseagent/agents/: __init__.py  base.py
ConverseAgent/src/converseagent/content/: __init__.py  assistant.py  base.py  content.py  document.py  image.py  reasoning.py  text.py  tool.py  user.py
ConverseAgent/src/converseagent/explainability/: invocation_history.py
ConverseAgent/src/converseagent/logging_utils/: logger_config.py
ConverseAgent/src/converseagent/memory/: __init__.py  base.py
ConverseAgent/src/converseagent/memory_store/: __init__.py  base.py
ConverseAgent/src/converseagent/messages/: __init__.py  assistant.py  base.py  system.py  user.py
ConverseAgent/src/converseagent/models/: base.py  bedrock.py  config.py  inference_config.py  request.py  response.py  stop_reason.py
ConverseAgent/src/converseagent/prompts/: base.py
ConverseAgent/src/converseagent/tools/: base.py  tool_response.py
ConverseAgent/src/converseagent/utils/: errors.py  retry.py  update.py  utils.py
ConverseAgent/src/converseagent_extras/agents/: browser_agent.py  computer_agent.py
ConverseAgent/tests/: conftest.py
ConverseAgent/tests/unit/content/: test_base_content_block.py  test_document_content_block.py  test_image_content_block.py  test_text_content_block.py  test_tool_content_block.py
ConverseAgent/tests/unit/explainability/: test_invocation_log.py
ConverseAgent/tests/unit/memory/: test_base_memory.py
(+39 files in other folders)
