[tool.poetry]
name = "converseagent"
version = "0.2.0"
description = "Build your own custom agent using Amazon Bedrock and Converse API"
authors = ["Ross Alas <alasross@amazon.com>"]
license = "MIT-0"
readme = "README.md"
packages = [
    { include = "converseagent", from = "src" },
    { include = "converseagent_extras", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
boto3 = "^1.35.63"
pdf2image = {version = "^1.17.0", optional = true}
html2text = {version = "^2024.2.26", optional = true}
pypdf2 = {version = "^3.0.1", optional = true}

[tool.poetry.group.extras.dependencies]
pdf2image = "^1.17.0"
html2text = "^2024.2.26"
pypdf2 = "^3.0.1"


[tool.poetry.group.ui.dependencies]
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
websockets = "^14.2"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88