[tool.poetry]
name = "converseagent"
version = "0.2.0"
description = "Build your own custom agent using Amazon Bedrock and Converse API"
authors = ["Ross Alas <alasross@amazon.com>"]
license = "MIT-0"
readme = "README.md"
packages = [
    { include = "converseagent", from = "src" },
    { include = "converseagent_extras", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
boto3 = "^1.35.63"

[tool.poetry.group.extras.dependencies]
pdf2image = "^1.17.0"
pypdf2 = "^3.0.1"
html2text = "^2024.2.26"
playwright = "^1.50.0"
pyautogui = "^0.9.54"

[tool.poetry.group.ui.dependencies]
fastapi = "^0.115.7"        
uvicorn = "^0.34.0"
websockets = "^14.2"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88